--- a/build.xml
+++ b/build.xml
@@ -15,6 +15,7 @@
     <property name="releaseDir" value="${buildRoot}/release" />
     <property name="reportsDir" value="${buildRoot}/reports" />
     <property name="releaseJar" value="hal.jar" />
+    <property name="zutilVersion" value="1.0.249" />
 
 
     <!-- ________________________ CLASSPATH ________________________ -->
@@ -113,8 +114,8 @@
 
     <target name="build-dependencies">
         <mkdir dir="${compileDir}" />
-        <get src="http://ci.koc.se/jenkins/job/Zutil/lastSuccessfulBuild/artifact/se/koc/zutil/1.0.247/zutil-1.0.247.jar"
-             dest="${libDir}" verbose="true" usetimestamp="true"/>
+        <get src="http://ci.koc.se/jenkins/job/Zutil/lastSuccessfulBuild/artifact/se/koc/zutil/${zutilVersion}/zutil-${zutilVersion}.jar"
+             dest="${libDir}/zutil.jar" verbose="true" usetimestamp="true"/>
     </target>
 
     <target name="build-plugins" depends="build">
