--- a/plugins/hal-zwave/build.xml
+++ b/plugins/hal-zwave/build.xml
@@ -27,6 +27,9 @@
 
     <!-- ________________________ PROPERTIES AND SETTINGS ________________________ -->
 
+    <!--plugin specific properties-->
+    <property name="releaseJar" value="hal-zwave.jar" />
+
     <!--common properties-->
     <property name="root" value="." />
     <property name="srcDir" value="${root}/src" />
@@ -37,7 +40,6 @@
     <property name="compileDir" value="${buildRoot}/production" />
     <property name="compileTestDir" value="${buildRoot}/test" />
     <property name="releaseDir" value="${buildRoot}/release" />
-    <property name="releaseJar" value="hal-zwave.jar" />
     <property name="reportsDir" value="../../${buildRoot}/reports" /> <!-- Use Hal reports folder -->
 
     <!-- ________________________ TARGETS ________________________ -->
