Updated plugin build files

--- a/plugins/hal-zwave/build.xml
+++ b/plugins/hal-zwave/build.xml
@@ -23,7 +23,7 @@
   ~ THE SOFTWARE.
   -->
 
-<project name="ZWave Plugin" >
+<project name="Hal ZWave Plugin" >
 
     <!-- ________________________ PROPERTIES AND SETTINGS ________________________ -->
 
