Some small updates and fixes for Zigbee

--- a/hal.conf.example
+++ b/hal.conf.example
@@ -26,6 +26,7 @@ hal.http_port=8080
 
 ## Zigbee plugin
 #zigbee.com_port=COM4
+#zigbee.dongle=CC2531|CONBEE|XBEE
 
 ## ZWave plugin
 #zwave.com_port=COM4
