--- a/logging.properties
+++ b/logging.properties
@@ -1,15 +1,30 @@
 # logging.properties
 # LogUtil.readConfiguration("logging.properties");
 
+# -------------------------------------
+# HAL
+# -------------------------------------
+
 handlers = java.util.logging.ConsoleHandler, java.util.logging.FileHandler
 java.util.logging.ConsoleHandler.level = ALL
 java.util.logging.ConsoleHandler.formatter = zutil.log.CompactLogFormatter
 java.util.logging.FileHandler.level = ALL
 java.util.logging.FileHandler.formatter = zutil.log.CompactLogFormatter
 
-
-se.hal.level = ALL
+# Libs
 
 zutil.level = ALL
 zutil.db.bean.level = INFO
 zutil.net.http.page.HttpFilePage.level = INFO
+
+# Hal Core
+
+se.hal.level = ALL
+
+# -------------------------------------
+# Plugins
+# -------------------------------------
+
+#com.zsmartsystems.zigbee.level = FINE
+com.zsmartsystems.zigbee.dongle.cc2531.zigbee.util.ByteUtils.level = INFO
+com.zsmartsystems.zigbee.dongle.cc2531.network.packet.ZToolPacketStream.level = INFO
