--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ distributions {
     main {
         contents {
             from 'hal.conf.example'
+            from 'hal-default.db'
             from 'logging.properties'
 
             from "${buildDir}/resources"
