Updated github language settings

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # Github language stats file
 external/* linguist-vendored
 lib/* linguist-vendored
-resource/web/css/* linguist-vendored
-resource/web/js/* linguist-vendored
+resource/resource/web/css/* linguist-vendored
+resource/resource/web/js/* linguist-vendored
