Downgraded zigbee framework to work with CC2531 dongle

--- a/logging.properties
+++ b/logging.properties
@@ -25,6 +25,6 @@ se.hal.level = ALL
 # Plugins
 # -------------------------------------
 
-#com.zsmartsystems.zigbee.level = FINE
-com.zsmartsystems.zigbee.dongle.cc2531.zigbee.util.ByteUtils.level = INFO
-com.zsmartsystems.zigbee.dongle.cc2531.network.packet.ZToolPacketStream.level = INFO
+com.zsmartsystems.zigbee.level = INFO
+#com.zsmartsystems.zigbee.dongle.cc2531.zigbee.util.ByteUtils.level = INFO
+#com.zsmartsystems.zigbee.dongle.cc2531.network.packet.ZToolPacketStream.level = INFO
