Added Zigbee attribute listener

--- a/logging.properties
+++ b/logging.properties
@@ -26,5 +26,6 @@ se.hal.level = ALL
 # -------------------------------------
 
 com.zsmartsystems.zigbee.level = INFO
+profiling.com.zsmartsystems.zigbee.level = INFO
 #com.zsmartsystems.zigbee.dongle.cc2531.zigbee.util.ByteUtils.level = INFO
 #com.zsmartsystems.zigbee.dongle.cc2531.network.packet.ZToolPacketStream.level = INFO
