Upgraded Zutil lib version

--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,6 @@ allprojects {
     repositories {
         mavenLocal()
         mavenCentral()
-        jcenter()
     }
 }
 
@@ -19,7 +18,8 @@ subprojects {
     apply plugin: 'java-library'
 
     dependencies {
-        implementation 'se.koc:zutil:1.0.291'
+        implementation 'se.koc:zutil:1.0.297'
+        //implementation 'se.koc:zutil:1.0.0-SNAPSHOT'
 
         testImplementation 'junit:junit:4.12'
         testImplementation 'org.hamcrest:hamcrest-core:2.2'
