Upgraded svg.js library to version 3

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ subprojects {
             java {
                 srcDirs 'src'
             }
+            // We do not want the resource folder to be included in the jar file
             //resources {
             //    srcDir 'resource'
             //}
