--- a/logging.properties
+++ b/logging.properties
@@ -15,6 +15,7 @@ java.util.logging.FileHandler.formatter = zutil.log.CompactLogFormatter
 
 zutil.level = ALL
 zutil.db.bean.level = INFO
+zutil.net.http.HttpServer.level = FINE
 zutil.net.http.page.HttpFilePage.level = INFO
 zutil.net.dns.MulticastDnsServer.level = FINE
 
